--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
             <img src="../media/img/loader.gif" alt="Loading...">
             <h3 class="br0_5-up">Wait a sec...</h3>
         </div>
+        <!--Hiden after a category is selected-->
         <div id="mainRegistrationDiv" class="container">
             <div class="userRegister round" id="registrationDiv">
                 <div class="titleContainer">
@@ -69,8 +70,14 @@
                     Si se acaba el tiempo la respuesta se marcará como incorrecta.</p>
             </div>
         </div>
-
-        <script src="../js/script.js"></script>
+        <div id="co-question-container" class="question-container">
+        </div>
+        <!--Coding category-->
+        <div class="coding-cat-container">
+            
+        </div>
+        <!--Space category-->
+        <script src="../js/main.js"></script>
         <script src="../js/loader.js"></script>
         <script src="../js/test.js"></script>
     </body>
