Score counter added, visual hints of correct and wrong answers has been redesigned

--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
                     <h2>Question 1 out of 6</h2>
                     <div class="numeric-ind">
                         <h3 id="timer"></h3>
-                        <h3 id="score">Score: 20</h3>
+                        <h3 id="score"></h3>
                     </div>
                 </div>
                 <div id="question">How many planets are in our solar system, and which one is the last?</div>
