--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,25 @@
         <div id="gen-container" class="general-container hide">
             <!--Coding category-->
             <div id="coding-question-container" class="qa-container hide">
+                <div id="indicators" class="indicators">
+                    <h2 id="place-indicator"></h2>
+                    <div id="numeric-ind" class="numeric-ind">
+                        <h3 id="timer"></h3>
+                        <h3 id="score"></h3>
+                    </div>
+                </div>
+                <div id="resultsDiv">
+                    <p id="results"></p>
+                </div>
+                <div id="question"></div>
+                <div id="answer-buttons" class="btn-grid">
+
+                </div>
+                <div id="controller" class="controller hide">
+                    <button class="answer-btn">Next</button>
+                </div>
             </div>
+
             <!--Space category-->
             <div id="space-question-container" class="qa-container hide">
                 <div id="indicators" class="indicators">
@@ -89,12 +107,9 @@
                 <div id="resultsDiv">
                     <p id="results"></p>
                 </div>
-                <div id="question">How many planets are in our solar system, and which one is the last?</div>
+                <div id="question"></div>
                 <div id="answer-buttons" class="btn-grid">
-                    <!-- <button class="answer-btn">8 planets, Neptune</button>
-                    <button class="answer-btn">8 planets, Pluto</button>
-                    <button class="answer-btn">4 planets, Earth</button>
-                    <button class="answer-btn">9 planets, Pluto</button> -->
+
                 </div>
                 <div id="controller" class="controller hide">
                     <button class="answer-btn">Next</button>
