Coding category fully working. Still, design and questions fixes are needed

--- a/html/index.html
+++ b/html/index.html
@@ -75,7 +75,7 @@
         </div>
         <div id="gen-container" class="general-container hide">
             <!--Coding category-->
-            <div id="coding-question-container" class="qa-container hide">
+            <!-- <div id="coding-question-container" class="qa-container hide">
                 <div id="indicators" class="indicators">
                     <h2 id="place-indicator"></h2>
                     <div id="numeric-ind" class="numeric-ind">
@@ -93,8 +93,9 @@
                 <div id="controller" class="controller hide">
                     <button class="answer-btn">Next</button>
                 </div>
-            </div>
+            </div> -->
 
+            <!-- nOW THE CONTAINER THAT CONTAINS SPACE QUESTIONS, IT'S THE ONE THAT CONTAINTS ALL CATEGORIES QUESTIONS -->
             <!--Space category-->
             <div id="space-question-container" class="qa-container hide">
                 <div id="indicators" class="indicators">
