--- a/html/index.html
+++ b/html/index.html
@@ -74,30 +74,7 @@
             </div>
         </div>
         <div id="gen-container" class="general-container hide">
-            <!--Coding category-->
-            <!-- <div id="coding-question-container" class="qa-container hide">
-                <div id="indicators" class="indicators">
-                    <h2 id="place-indicator"></h2>
-                    <div id="numeric-ind" class="numeric-ind">
-                        <h3 id="timer"></h3>
-                        <h3 id="score"></h3>
-                    </div>
-                </div>
-                <div id="resultsDiv">
-                    <p id="results"></p>
-                </div>
-                <div id="question"></div>
-                <div id="answer-buttons" class="btn-grid">
-
-                </div>
-                <div id="controller" class="controller hide">
-                    <button class="answer-btn">Next</button>
-                </div>
-            </div> -->
-
-            <!-- nOW THE CONTAINER THAT CONTAINS SPACE QUESTIONS, IT'S THE ONE THAT CONTAINTS ALL CATEGORIES QUESTIONS -->
-            <!--Space category-->
-            <div id="space-question-container" class="qa-container hide">
+            <div id="question-container" class="qa-container hide">
                 <div id="indicators" class="indicators">
                     <h2 id="place-indicator"></h2>
                     <div id="numeric-ind" class="numeric-ind">
