Final fixes and responsive modal

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/indexStyle.css">
         <link rel="stylesheet" href="../css/codingCatStyle.css">
         <link rel="stylesheet" href="../css/spaceCatStyle.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <title>Ask2Me</title>
     </head>
 
@@ -95,6 +96,20 @@
                 <div id="controller" class="controller hide">
                     <button class="answer-btn">Next</button>
                 </div>
+            </div>
+        </div>
+
+        <div class="modal hide">
+            <div class="modal-header">
+                <h2><i class="far fa-clock"></i> Time's up!</h2>
+            </div>
+            <div class="modal-content">
+                <img src="../media/icons/cronografo.png">
+                <p>The trivia wasn't that hard after all.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <a class="modal-btn-close">Check Results! <i class="fas fa-arrow-alt-circle-right"></i></a>
             </div>
         </div>
 
