--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
     <head>
-        <link rel="shortcut icon" href="../media/icons/idea.ico">
+        <link rel="shortcut icon" href="media/icons/idea.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/generalStyle.css">
-        <link rel="stylesheet" href="../css/indexStyle.css">
-        <link rel="stylesheet" href="../css/codingCatStyle.css">
-        <link rel="stylesheet" href="../css/spaceCatStyle.css">
+        <link rel="stylesheet" href="css/generalStyle.css">
+        <link rel="stylesheet" href="css/indexStyle.css">
+        <link rel="stylesheet" href="css/codingCatStyle.css">
+        <link rel="stylesheet" href="css/spaceCatStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <title>Ask2Me</title>
     </head>
@@ -16,7 +16,7 @@
     <body id="bg-body" class="body-index ">
         <!--Loader-->
         <div id="loader" class="loader">
-            <img src="../media/img/loader.gif" alt="Loading...">
+            <img src="media/img/loader.gif" alt="Loading...">
             <h3 class="br0_5-up">Wait a sec...</h3>
         </div>
 
@@ -39,7 +39,7 @@
                         <div class="categories">
 
                             <div class="cat round">
-                                <img class="img-cat" src="../media/img/coding.png" alt="Coding">
+                                <img class="img-cat" src="media/img/coding.png" alt="Coding">
                                 <label class="input-container" for=""> Coding
                                     <input type="radio" name="radio" value="1">
                                     <span class="checkmark"></span>
@@ -47,7 +47,7 @@
                             </div>
 
                             <div class="cat round">
-                                <img class="img-cat" src="../media/img/space.png" alt="Space">
+                                <img class="img-cat" src="media/img/space.png" alt="Space">
                                 <label class="input-container" for=""> Space
                                     <input type="radio" name="radio" value="2">
                                     <span class="checkmark"></span>
@@ -106,7 +106,7 @@
                 <h2><i class="far fa-clock"></i> Time's up!</h2>
             </div>
             <div class="modal-content">
-                <img src="../media/icons/cronografo.png">
+                <img src="media/icons/cronografo.png">
                 <p>The trivia wasn't that hard after all.
                 </p>
             </div>
@@ -115,9 +115,9 @@
             </div>
         </div>
 
-        <script src="../js/questions.js"></script>
-        <script src="../js/main.js"></script>
-        <script src="../js/loader.js"></script>
+        <script src="js/questions.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/loader.js"></script>
 
     </body>
 
