--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <div id="mainRegistrationDiv" class="container">
             <div class="userRegister round" id="registrationDiv">
                 <div class="titleContainer">
-                    <h1 class="title"></i>Bienvenido a<span class="brand-name">
+                    <h1 class="title"></i>Welcome to<span class="brand-name">
                             Ask2Me! </span></h1>
                 </div>
                 <form class="userRegisterForm round" name="cato" action="">
                     <div class="nameInput">
-                        <label class="label-title" for="name">Ingresa tu nombre:</label>
+                        <label class="label-title" for="name">Enter your name:</label>
                         <input type="text" class="input round" id="name" required>
                     </div>
 
                     <div class="categoriesContainer">
-                        <label class="label-title" for="">Selecciona una categoria para las preguntas:</label>
+                        <label class="label-title" for="">Select a category:</label>
 
                         <div class="categories">
 
@@ -58,17 +58,15 @@
                     </div>
 
                     <div class="btnContainer">
-                        <button type="submit" id="btnComenzar" class="index-btn round"> Comenzar! </button>
+                        <button type="submit" id="btnComenzar" class="index-btn round"> Start! </button>
                     </div>
                 </form>
             </div>
             <div class="rules round" id="rulesDiv">
-                <h1 class="text-white rules-title">Reglas</h1>
-                <p class="rules-text">1.Este es un juego de trivia, asi que tienes que seleccionar una categoria e
-                    ingresar tu nombre para comezar.</p>
-                <p class="rules-text">2.Cada categoria contiene 6 preguntas, depende la cantidad que respondas
-                    correctamente para obtener un puntaje.</p>
-                <p class="rules-text">3.Cada pregunta consta de 4 respuestas y dispones de 45 segundos para responder.
+                <h1 class="text-white rules-title">Rules</h1>
+                <p class="rules-text">1.This is a trivia game, so you have to select a category and enter your name to start.</p>
+                <p class="rules-text">2.Each category contains 6 questions, it depends on how many you answer correctly to get a score.</p>
+                <p class="rules-text">3.Each question consists of 4 answers and you have 45 seconds to answer.
                 </p>
             </div>
         </div>
